Mon Jul  2 12:03:36 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * bin/MakeProjectCreator/config/global.features:
        
          Added line 'gen_ostream = 0' so that the gen_ostream feature
          can be inherited into tao.mpc but be turned off by default.
          Thanks to Johnny Willemsen <jwillemsen at remedy dot nl> for
          suggesting this approach to keeping the default footprint
          of TAO from rising by default generation of ostream insertion
          operators for all ORB-defined IDL types.

Mon Jul  2 11:39:20 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * ACE.mwc:

          Utilize the new 'associate' feature to decrease the amount of
          hand editing required for automake generation.

        * bin/MakeProjectCreator/modules/AutomakeWorkspaceHelper.pm:

          Minor change to remove an extra new line.

Mon Jul  2 09:40:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_socket.h:
          Defined SCM_RIGHTS when it is not defined yet

        * ace/Activation_Queue.{h,cpp}:
          Changed delete_queue_ to a real bool

        * ace/Sig_Handler.h:
          Doxygen improvements

Mon Jul  2 09:01:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug 2936 regression

Mon Jul  2 07:33:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Added Bug 2926 regression

Sun Jul  1 17:01:21 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * apps/drwho/PMC_All.cpp:

          Removed #include "ace/OS_NS_stdio.h"

        * apps/drwho/PMS_All.cpp:

          Added #include "ace/OS_NS_stdio.h"

          The include was introduced to the wrong file by mistake in
          Sat Jun 30 16:19:57 UTC 2007  Abdullah Sowayan  <abdul...>

Sat Jun 30 16:19:57 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * apps/drwho/PMC_All.cpp: